package models;

public interface ReportFault {

    boolean reportFault();
}
