package utils;

public enum Position {
    MANUAL_WORKER,
    MEDIC,
    MANAGER
}
